[project]
name = "vibe-check"
version = "0.1.0"
description = "An MCP server for tracking and reverting code changes based on chat context history"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ 
    "mcp>=1.7.1",
    "typing-extensions>=4.0.0",
]
[[project.authors]]
name = "yashvi.bansal"
email = "yashvi.bansal.min19@itbhu.ac.in"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
vibe-check = "vibe_check:main"
