# filepath: /Users/harshitchoudhary/Desktop/TBH/vibe_check/src/pyproject.toml
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe_check"
version = "0.1.0"
description = "A tool for tracking and reverting code changes."
dependencies = []

[tool.setuptools]
packages = ["vibe_check"]